--- a/angular-sonar-coverage/angular.json
+++ b/angular-sonar-coverage/angular.json
@@ -64,11 +64,10 @@
             "browserTarget": "test-app:build"
           }
         },
-       "architect": {
+      
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
-            "codeCoverage": true,
             "main": "src/test.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.spec.json",
@@ -80,7 +79,8 @@
             "assets": [
               "src/favicon.ico",
               "src/assets"
-            ]
+            ],
+            "codeCoverage": true
           }
         },
         "lint": {
