--- a/angular-sonar-coverage/package.json
+++ b/angular-sonar-coverage/package.json
@@ -8,7 +8,8 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "sonar": "sonar-scanner"
+    "sonar": "sonar-scanner",
+    "test-headless": "ng test --watch=false --browsers=ChromeHeadless --reporters=junit --code-coverage"
   },
   "private": true,
   "dependencies": {
