--- a/angular-sonar-coverage/angular.json
+++ b/angular-sonar-coverage/angular.json
@@ -68,6 +68,7 @@
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
+             "codeCoverage": true,
             "main": "src/test.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.spec.json",
@@ -80,7 +81,7 @@
               "src/favicon.ico",
               "src/assets"
             ],
-            "codeCoverage": true
+           
           }
         },
         "lint": {
